Fixed scrollbar colors

--- a/style.css
+++ b/style.css
@@ -128,46 +128,38 @@ img.resize {
     user-select: none;
     line-height: 1.8;
 }
-.custom-scrollbar{
+.custom-scrollbar {
     user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
-    ::-webkit-scrollbar {
-        width: 10px;
-      }
-      ::-webkit-scrollbar-thumb {
-        background-color: #4e4cc4;
-        border-radius: 15px;
-      }
-      /* Firefox */
-      ::-moz-scrollbar {
-        width: 10px;
-      }
-      ::-moz-scrollbar-thumb {
-        background-color: #4e4cc4;
-        border-radius: 15px;
-      }
-}
-#messageInput.custom-scrollbar::-webkit-scrollbar {
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar {
     width: 10px;
   }
-  #messageInput.custom-scrollbar::-webkit-scrollbar-thumb {
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb {
     background-color: #4e4cc4;
     border-radius: 15px;
   }
-  #messageInput.custom-scrollbar::-webkit-scrollbar-button {
-    background-color: #4e4cc4;
+  
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #333333;
   }
-  #messageInput.custom-scrollbar::-moz-scrollbar {
+  
+  .custom-scrollbar::-moz-scrollbar {
     width: 10px;
   }
-  #messageInput.custom-scrollbar::-moz-scrollbar-thumb {
+  
+  .custom-scrollbar::-moz-scrollbar-thumb {
     background-color: #4e4cc4;
     border-radius: 15px;
   }
-  #messageInput.custom-scrollbar::-moz-scrollbar-button {
-    background-color: #4e4cc4;
+  
+  .custom-scrollbar::-moz-scrollbar-track {
+    background-color: #333333;
   }
+
 a {
     color: #0ff;
 }
